@@ -1,14 +1,13 @@
 package net.finmath.smartcontract.valuation.marketdata.curvecalibration;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import jakarta.xml.bind.JAXBContext;
-import jakarta.xml.bind.Unmarshaller;
+import net.finmath.smartcontract.model.ExceptionId;
 import net.finmath.smartcontract.model.MarketDataList;
+import net.finmath.smartcontract.model.SDCException;
 import net.finmath.smartcontract.product.xml.SDCXMLParser;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.io.StringReader;
 import java.io.UnsupportedEncodingException;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
@@ -21,6 +20,7 @@ import java.util.stream.Stream;
 /**
  * Parses calibration data points and converts it to calibration specs
  */
+@SuppressWarnings("java:S125")
 public class CalibrationParserDataItems implements CalibrationParser {
 
 
@@ -96,7 +96,7 @@ public class CalibrationParserDataItems implements CalibrationParser {
 	 * @throws IOException                  File not found
 	 * @throws UnsupportedEncodingException UnsupportedEncodingException
 	 */
-	public static List<CalibrationDataset> getScenariosFromJsonString(final String jsonString) throws UnsupportedEncodingException, IOException {
+	public static List<CalibrationDataset> getScenariosFromJsonString(final String jsonString) throws IOException {
 		final String content;
 
 		content = jsonString;
@@ -104,9 +104,9 @@ public class CalibrationParserDataItems implements CalibrationParser {
 
 	}
 
-	public static  CalibrationDataset getCalibrationDataSetFromXML(final String xmlString, List<CalibrationDataItem.Spec> dataSpecs) throws  Exception {
-		StringReader reader = new StringReader(xmlString);
-		JAXBContext jaxbContext = JAXBContext.newInstance(MarketDataList.class);
+	public static  CalibrationDataset getCalibrationDataSetFromXML(final String xmlString, List<CalibrationDataItem.Spec> dataSpecs) {
+		//StringReader reader = new StringReader(xmlString);
+		//JAXBContext jaxbContext = JAXBContext.newInstance(MarketDataList.class);
 		MarketDataList marketDataList =  SDCXMLParser.unmarshalXml(xmlString, MarketDataList.class);
 
 		Set<CalibrationDataItem> calibrationDataItems = new LinkedHashSet<>();
@@ -118,13 +118,9 @@ public class CalibrationParserDataItems implements CalibrationParser {
 		});
 
 		if(calibrationDataItems.isEmpty())
-			throw new RuntimeException("No calibration items detected.");
+			throw new SDCException(ExceptionId.SDC_002, "No calibration items detected.");
 
-		CalibrationDataset set = new CalibrationDataset(calibrationDataItems, marketDataList.getRequestTimeStamp());
-
-
-
-		return set;
+		return new CalibrationDataset(calibrationDataItems, marketDataList.getRequestTimeStamp());
 	}
 
 	/**
@@ -150,7 +146,7 @@ public class CalibrationParserDataItems implements CalibrationParser {
 		final ObjectMapper mapper = new ObjectMapper();
 		final Map<String, Map<String, Map<String, Map<String, Map<String, Double>>>>> timeSeriesDatamap = mapper.readValue(content, new LinkedHashMap<String, Map<String, Map<String, Map<String, Map<String, Double>>>>>().getClass());
 
-		final List<CalibrationDataset> scenarioList = timeSeriesDatamap.entrySet().stream()
+		return timeSeriesDatamap.entrySet().stream()
 				.map(
 						scenarioData -> {
 							final String timeStampStr = scenarioData.getKey();
@@ -165,9 +161,7 @@ public class CalibrationParserDataItems implements CalibrationParser {
 							return scenario;
 						})
 				.sorted((scenario1, scenario2) -> scenario1.getDate().compareTo(scenario2.getDate()))
-				.collect(Collectors.toList());
-
-		return scenarioList;
+				.toList();
 	}
 
 	private static LocalDateTime parseTimestampString(String timeStampString) {
@@ -188,27 +182,23 @@ public class CalibrationParserDataItems implements CalibrationParser {
 
 
 	private static Set<CalibrationDataItem> getCalibrationDataItemSet(final String curveKey, final Map<String, Map<String, Double>> typeCurveMap, final LocalDateTime timestamp) {
-		Set<CalibrationDataItem> datapoints = typeCurveMap.entrySet().stream().flatMap(entry -> entry.getValue().entrySet().stream().map(
+		return typeCurveMap.entrySet().stream().flatMap(entry -> entry.getValue().entrySet().stream().map(
 				curvePointEntry -> {
 					String specKey = curveKey + "_" + entry.getKey() + "_" + curvePointEntry.getKey();
 					CalibrationDataItem.Spec spec = new CalibrationDataItem.Spec(specKey, curveKey, entry.getKey(), curvePointEntry.getKey());
-					CalibrationDataItem dataItem = new CalibrationDataItem(spec, curvePointEntry.getValue(), timestamp);
-					return dataItem;
+					return new CalibrationDataItem(spec, curvePointEntry.getValue(), timestamp);
 				})).collect(Collectors.toCollection(LinkedHashSet::new));
-		return datapoints;
 	}
 
 	private static Set<CalibrationDataItem> getFixingDataItemSet(final String curveKey, final Map<String, Map<String, Double>> typeCurveMap, final LocalDateTime timestamp) {
 
-		Set<CalibrationDataItem> datapoints = typeCurveMap.entrySet().stream().flatMap(entry -> entry.getValue().entrySet().stream().map(
+		return typeCurveMap.entrySet().stream().flatMap(entry -> entry.getValue().entrySet().stream().map(
 				curvePointEntry -> {
 					LocalDate fixingDate = LocalDate.parse(curvePointEntry.getKey(), DateTimeFormatter.ofPattern("yyyy-MM-dd"));
 					String specKey = curveKey + "_" + entry.getKey() + "_" + curvePointEntry.getKey();
 					CalibrationDataItem.Spec spec = new CalibrationDataItem.Spec(specKey, curveKey, entry.getKey(), "1D");
-					CalibrationDataItem dataItem = new CalibrationDataItem(spec, curvePointEntry.getValue(), fixingDate.atStartOfDay());
-					return dataItem;
+					return new CalibrationDataItem(spec, curvePointEntry.getValue(), fixingDate.atStartOfDay());
 				})).collect(Collectors.toCollection(LinkedHashSet::new));
-		return datapoints;
 	}
 
 
